AX: CSS content alt text is not announced by VoiceOver https://bugs.webkit.org/show_bug.cgi?id=292653 rdar://150830550

Reviewed by Joshua Hoffman.

This commit incorporates usage of alt text from CSS `content` into the various existing places we get alt text, e.g.
from the alt attribute.

* LayoutTests/accessibility/css-content-alt-text-expected.txt: Added.
* LayoutTests/accessibility/css-content-alt-text.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* Source/WebCore/accessibility/AccessibilityImageMapLink.cpp:
(WebCore::AccessibilityImageMapLink::description const):
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::usesAltForTextComputation const):
(WebCore::AccessibilityNodeObject::textAsLabelFor const):
(WebCore::AccessibilityNodeObject::alternativeText const):
(WebCore::AccessibilityNodeObject::description const):
(WebCore::AccessibilityNodeObject::usesAltTagForTextComputation const): Deleted.
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::altTextFromAttributeOrStyle const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::objectInclusionFromAltText):
(WebCore::AccessibilityRenderObject::computeIsIgnored const):
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::createFor):
* Source/WebCore/rendering/RenderImage.cpp:
(WebCore::RenderImage::updateAltText):
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::altFromContent const):
* Source/WebCore/rendering/style/RenderStyle.h:

Canonical link: https://commits.webkit.org/297848@main