Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -1071,7 +1071,7 @@ bool AccessibilityRenderObject::isAllowedChildOfTree() const
 
 static AccessibilityObjectInclusion objectInclusionFromAltText(const String& altText)
 {
-    // Don't ignore an image that has an alt tag.
+    // Don't ignore an image that has alt text.
     if (!altText.containsOnly<isASCIIWhitespace>())
         return AccessibilityObjectInclusion::IncludeObject;
 
@@ -1241,7 +1241,7 @@ bool AccessibilityRenderObject::computeIsIgnored() const
         if (image)
             altTextInclusion = objectInclusionFromAltText(image->altText());
         else
-            altTextInclusion = objectInclusionFromAltText(getAttribute(altAttr).string());
+            altTextInclusion = objectInclusionFromAltText(altTextFromAttributeOrStyle());
 
         if (altTextInclusion == AccessibilityObjectInclusion::IgnoreObject)
             return true;
